<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ecs_toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ecs_Lat"
        android:id="@+id/TVLat"/>

    <EditText
        android:id="@+id/latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ecs_Lat"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ecs_Long"
        android:id="@+id/TVLong"/>

    <EditText
        android:id="@+id/longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ecs_Long"
         />

    <Button
        android:id="@+id/search_button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ecs_search"
        />

    <Button
        android:id="@+id/fav_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ecs_favorites"
        />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />


    <ListView
        android:id="@+id/listviewecs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>